RecordIdDeduplicator::getApproximateSize() is incorrect

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Execution
    • Fully Compatible
    • ALL
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The method RecordIdDeduplicator::getApproximateSize() is supposed to report the amount of memory used in bytes of the containers it uses for deduplication.

      Here is its implementation:

      uint64_t getApproximateSize() {
          return _hashset.size() + _roaring.getApproximateSize();
      }
      

      The hash set size reported is the number of elements in the set, so this implementation is incorrect. We should update the implementation to approximate the amount of memory in bytes used by the hash set.

            Assignee:
            Foteini Alvanaki
            Reporter:
            Chris Wolff
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: