SERVER-107627 : Fix RecordIdDeduplicator approximate size (#40125)

GitOrigin-RevId: f50ee0cce00f75899ef748f02d712d4358bc1ca7