src/mongo/db/exec/classic/recordid_deduplicator.h
@@ -94,7 +94,8 @@ public:
     void freeMemory(const RecordId& recordId);
 
     uint64_t getApproximateSize() const {
-        return _hashset.size() + _roaring.getApproximateSize();
+        size_t emptySlotsSpace = (_hashset.capacity() - _hashset.size()) * sizeof(RecordId);
+        return emptySlotsSpace + _hashSetMemUsage + _roaring.getApproximateSize();
     }
 
 private:
@@ -108,5 +109,7 @@ private:
 
     std::unique_ptr<SpillTable> _diskStorageString;
     std::unique_ptr<SpillTable> _diskStorageLong;
+
+    uint64_t _hashSetMemUsage = 0;
 };
 }  // namespace mongo
